# realtime-fakenews-detector

./: .gitignore  Document de Cadrage.docx  Readme.md  docker-compose.yml  pyproject.toml  shéma_project.drawio
src/: setup_db.py  verify_data.py
src/extractors/: scrape_gorafi.py
src/streaming/: kafka_consumer.py
