[project]
name = "atelier-deploiment-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "kafka-python>=3.0.0",
    "pandas>=3.0.3",
    "psycopg2-binary>=2.9.12",
    "requests>=2.34.2",
    "torch>=2.12.0",
    "transformers>=5.11.0",
]
